--- a/edgebound/src/app/components/dashboard/dashboard.component.html
+++ b/edgebound/src/app/components/dashboard/dashboard.component.html
@@ -36,7 +36,7 @@
                     <div class="login-password">
                         <div>
                             <i class="material-icons">visibility_off</i>
-                            <span>ocultar</span>
+                            <span>ocultar contraseña</span>
                         </div>
                         <a routerLink="/recover">olvidé mi contraseña</a>
                     </div>
