--- a/edgebound/src/app/components/footer-links/envios/envios.component.css
+++ b/edgebound/src/app/components/footer-links/envios/envios.component.css
@@ -5,30 +5,32 @@
     padding: .5rem;
 }
 .sectionTitle {
-    font-family: "MuseoSans-7";
+    
     margin-bottom: 20px;
     text-align: center;
     letter-spacing: .2em;
 }   
 .sectionTitle h2{
     font-size: 1.5em;
+    font-weight: 700;
 }
 .termContent {
     padding-left: 25px;
 }
 .termContent p {
-    font-family: "MuseoSans-5";
+    
     line-height: 1.6;
     margin: 16px 0;
     text-align: justify;
 }
 .subtitle {
-    font-family: "MuseoSans-7";
+    
     margin: 10px 0;
     letter-spacing: .1em;
 }
 .subtitle h3{
     font-size: 1.17em;
+    font-weight: 700;
 }
 
 .upper{
@@ -43,7 +45,7 @@
     text-align: justify;
 }
 .termContent ol li {
-    font-family: "MuseoSans-5";
+    
     list-style-type: decimal;
     padding: 0 5px;
 }
@@ -58,7 +60,7 @@
     text-align: justify;
 }
 .termContent ul li {
-    font-family: "MuseoSans-5";
+    
     list-style-type: disc;
     line-height: 1.3;
 }
