--- a/edgebound/src/app/components/footer-links/sucursales/sucursales.component.css
+++ b/edgebound/src/app/components/footer-links/sucursales/sucursales.component.css
@@ -9,7 +9,7 @@
     width: 100%;
 }
 .branches-page h3 {
-    font-family: "MuseoSans-5";
+    
     width: 100%;
     margin: 1rem 0 2rem;
     font-size: 1.25rem;
@@ -40,14 +40,14 @@
     border-top: 1px solid var(--grey);
 }
 .branches-info {
-    font-family: "MuseoSans-5";
+
     width: 100%;
     padding: .5rem;
     background-color: var(--white);
     margin-bottom: 1rem;
 }
 .branches-info h5 {
-    font-family: "MuseoSans-7";
+    font-weight: 700;
     font-size: 1.25rem;
     margin-bottom: .5rem;
 }
