--- a/edgebound/src/app/components/navbar/navbar.component.html
+++ b/edgebound/src/app/components/navbar/navbar.component.html
@@ -71,7 +71,7 @@
             <p>Mi cuenta</p>
           </a>
         </div>
-        <div class="menu-actions-btn menu-actions-wishlist"><a href="/wishlist"><i class="material-icons ">favorite_border</i></a></div>
+        <!-- <div class="menu-actions-btn menu-actions-wishlist"><a href="/wishlist"><i class="material-icons ">favorite_border</i></a></div> -->
         <div class="menu-actions-btn menu-actions-cart">
           <a routerLink="/cart">
             <img src="https://llanodelatorre.com.mx/static/media/icon-cart.13a9e995.svg" alt="cart">
