--- a/edgebound/src/app/components/footer-links/faq/faq.component.css
+++ b/edgebound/src/app/components/footer-links/faq/faq.component.css
@@ -11,7 +11,7 @@ h2 {
     text-transform: uppercase;
 }
 .sectionTitle {
-    font-family: "MuseoSans-7";
+    
     margin-bottom: 20px;
     text-align: center;
     letter-spacing: .2em;
@@ -20,12 +20,13 @@ h2 {
     margin: 0;
 }
 .instructions {
-    font-family: "MuseoSans-7";
+    
     text-align: center;
     margin: 10px;
     color: var(--grey);
 }
 .instructions{
+    font-weight: 700;
     font-size: 1.17em;
 }
 .separator {
@@ -42,7 +43,7 @@ h2 {
     width: 100%;
 }
 .question {
-    font-family: "MuseoSans-5";
+    
     border: 1px solid #000;
     /* padding: 10px; */
     border-radius: 7px;
@@ -54,7 +55,7 @@ h2 {
     color: var(--white);
 }
 .acordeon_contenido p{
-    font-family: 'MuseoSans-5';
+    font-weight: 500;
     color: var(--black);
     text-rendering: optimizeLegibility;
 }
