--- a/edgebound/src/app/components/footer-links/quienes-somos/quienes-somos.component.css
+++ b/edgebound/src/app/components/footer-links/quienes-somos/quienes-somos.component.css
@@ -16,12 +16,12 @@
     margin-bottom: 2rem;
 }
 .about-content h2 {
-    font-family: "MuseoSans-7";
+    font-weight: 700;
     font-size: 2rem;
     margin-bottom: 1rem;
 }
 .about-content p {
-    font-family: "MuseoSans-5";
+    
     line-height: 1.5;
 }
 
