--- a/edgebound/src/app/components/navbar/navbar.component.css
+++ b/edgebound/src/app/components/navbar/navbar.component.css
@@ -67,7 +67,7 @@
     width: 100%;
 }
 .searchbox-form label input {
-    font-family: "MuseoSans-3";
+    
     border: none;
     background-color: var(--light2);
     color: var(--dark);
@@ -214,11 +214,9 @@
     transform: translateY(0);
     z-index: 1;
 }
-.nav-mobile-item span{
-    font-family: "MuseoSans-5";
-}
+
 .nav-mobile-item>a span {
-    font-family: "MuseoSans";
+    
     font-size: .75rem;
     color: var(--light1);
 }
@@ -234,7 +232,7 @@
 }
 .nav-mobile-subs a {
     display:inline-flex;
-    font-family: "MuseoSans-5";
+    
     width: 48%;
     color: var(--black);
     font-size: .9rem;
@@ -277,11 +275,13 @@
     overflow-y: scroll;
     background-color: var(--light3);
     margin-bottom: 1rem;
+    padding-left: 0;
 }
 .searchbox--suggestions-list li {
     width: 100%;
     display: block;
 }
+
 .searchbox--suggestions-list li a {
     display: block;
     padding: .75rem .5rem;
