--- a/edgebound/src/app/components/new-address/new-address.component.css
+++ b/edgebound/src/app/components/new-address/new-address.component.css
@@ -124,7 +124,297 @@
     text-align: center;
     border-radius: .3rem;
 }
+.menu-logo button {
+    margin-right: .75rem;
+    padding: .5rem;
+    background-color: transparent;
+}
+.menu-actions button {
+    background-color: transparent;
+}
+.menu-actions-search{
+    height: 48px;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+.menu-actions-cart{
+    height: 42px;
+}
+.menu-logo{
+    height: 44px;
+}
+.menu-logo button{
+    height: 44px;
+}
 
+.header-desktop{
+    display: none;
+}
+.header-mob{
+    display: block;
+}
+
+.searchbox-mobile {
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    width: 100%;
+    background-color: var(--white);
+    padding: 1rem;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    z-index: 1;
+    display: block;
+    visibility: hidden;
+    overflow: scroll;
+}
+.searchbox-active {
+    display: block;
+    min-height: 100vh;
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+}
+.searchbox-form {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--light2);
+}
+.searchbox-form label {
+    width: 100%;
+}
+.searchbox-form label input {
+    
+    border: none;
+    background-color: var(--light2);
+    color: var(--dark);
+    font-weight: 300;
+}
+.searchbox-form button {
+    padding: .5rem;
+    background-color: var(--light2);
+    line-height: 0;
+}
+.searchbox-form p {
+    display: inline-block;
+    padding: .64rem .25rem;
+    background-color: var(--white);
+}
+.searchbox-form p i {
+    color: var(--black);
+    font-size: 2rem;
+    vertical-align: text-bottom;
+}
+/* nav mobile */
+.nav-mobile {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
+.nav-mobile-container, .nav-mobile.active {
+    width: 100%;
+    background-color: var(--white);
+}
+.nav-mobile-actions {
+    width: 100%;
+    padding: .5rem 0;
+    justify-content: space-between;
+}
+.nav-mobile-actions, .nav-mobile-actions>button {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+.nav-mobile-actions>button {
+    justify-content: flex-start;
+    color: var(--black);
+    line-height: 0;
+}
+.nav-mobile-actions, .nav-mobile-actions>button {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+.nav-mobile-actions>button i {
+    font-size: 1.8rem;
+}
+.nav-mobile-content {
+    width: 100%;
+    padding: .5rem 0;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.nav-mobile-item {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid var(--light2);
+}
+.nav-mobile-item:first-of-type {
+    border-top: 1px solid var(--light2);
+}
+.nav-mobile-item>button {
+    max-width: 68%;
+    justify-content: flex-start;
+}
+.nav-mobile-item>a, .nav-mobile-item button {
+    padding: 1rem;
+    color: var(--dark);
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: left;
+}
+.nav-mobile-item>button i {
+    font-size: 3rem;
+    -webkit-transform: translateX(-.5rem);
+    transform: translateX(-.5rem);
+    font-size: 1rem;
+}
+.nav-mobile-item>a {
+    justify-content: flex-end;
+}
+.nav-mobile-item>a, .nav-mobile-item button {
+    padding: 1rem;
+    color: var(--dark);
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: left;
+}
+.nav-mobile-static {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 1rem;
+    padding: 1rem;
+}
+.nav-mobile-static a {
+    color: var(--grey);
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
+    margin: .5rem 0;
+}
+.nav-mobile-static a i {
+    font-size: 1rem;
+    margin-right: .25rem;
+}
+.nav-mobile-static a span {
+    font-size: .8rem;
+}
+.nav-mobile-container, .nav-mobile.active {
+    width: 100%;
+    background-color: var(--white);
+}
+.nav-mobile.active {
+    display: block;
+    overflow: scroll;
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    z-index: 1;
+}
+
+.nav-mobile-item>a span {
+    
+    font-size: .75rem;
+    color: var(--light1);
+}
+
+.nav-mobile-subs {
+    width: 100%;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--light3);
+    padding: .5rem;
+    display: none;
+}
+.nav-mobile-subs a {
+    display:inline-flex;
+    
+    width: 48%;
+    color: var(--black);
+    font-size: .9rem;
+    text-align: left;
+    padding: 1rem;
+}
+.active-subs{
+    display:block;
+}
+
+.nav-mobile-item:focus-within > .nav-mobile-subs{
+ display:block;   
+}
+
+/* sugerencia */
+.searchbox--suggestions {
+    width: 100%;
+    padding: 1rem;
+    background-color: var(--white);
+    z-index: 1;
+}
+.searchbox--suggestions-block {
+    width: 100%;
+    display: block;
+    margin-bottom: .5rem;
+}
+.searchbox--suggestions-block p {
+    color: var(--dark);
+    font-size: .8rem;
+    font-weight: 300;
+    border-bottom: 1px solid var(--grey);
+    margin-bottom: .25rem;
+    padding-bottom: .25rem;
+}
+.searchbox--suggestions-list {
+    width: 100%;
+    height: auto;
+    max-height: 42vh;
+    display: block;
+    overflow-y: scroll;
+    background-color: var(--light3);
+    margin-bottom: 1rem;
+    padding-left: 0;
+}
+.searchbox--suggestions-list li {
+    width: 100%;
+    display: block;
+}
+
+.searchbox--suggestions-list li a {
+    display: block;
+    padding: .75rem .5rem;
+    color: var(--black);
+    font-size: .9rem;
+    border-bottom: 1px solid var(--white);
+}
 
 @media screen and (min-width: 760px){
 
@@ -140,7 +430,12 @@
 .form-input-half-third, .form-selector-half-third {
     width: 23%;
 }
-
+.header-mob{
+    display: block;
+}
+.header-desktop{
+    display: none;
+}
 
 }
 
@@ -153,6 +448,29 @@
 }
 .address-new-form {
     width: 68%;
+}
+.header-mob{
+    display: none;
+}
+.header-desktop{
+    display: block;
+}
+.searchbox--suggestions {
+    background-color: var(--light3);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    max-height: 27rem;
+    overflow: scroll;
+    display: none;
+}
+.searchbox--suggestions-list {
+    max-height: 100vh;
+    overflow-y: visible;
+}
+.show-suggetions{
+    display: block;
 }
 
 }
